...

        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
        ) {
            WaitingColumn(
                title = "Players",
                users = players,
                modifier = Modifier.weight(1f),
            )

            WaitingColumn(
                title = "Spectators",
                users = spectators,
                modifier = Modifier.weight(1f),
            )
        }

        Button(
...
